--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,8 @@
       name="description"
       content="Shop page"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="icon" href="https://icons8.ru/icon/M1E1lvfGKP4l/online-shop"
+    <link rel="apple-touch-icon" href="" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>React Shop</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
