--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Shop page"
     />
-    <link rel="icon" href="https://icons8.ru/icon/M1E1lvfGKP4l/online-shop"
+    <link rel="icon" href="https://icons8.ru/icon/M1E1lvfGKP4l/online-shop" />
     <link rel="apple-touch-icon" href="" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>React Shop</title>
